kubernetes/home/apps/default/nginx/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.shaklab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: nginx
          port: 80
  tls:
    secretName: shaklab-com-tls
